SpringBoot2-Apollo/k8s/deployment.yaml
# Copyright 2017 ApplicationPower.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Configuration to deploy release version of the springboot application compatible with
# Kubernetes 1.8.
#
# Example usage: kubectl create -f <this_file>
# ------------------- SpringBoot Application Service ---------------------- #
apiVersion: v1
kind: Service
metadata:
 name: springboot2-apollo-svc
 namespace: default
spec:
 #type: NodePort
 ports:
 - port: 8888
   targetPort: 8888
   #nodePort: 30011
 selector:
  app: springboot2-apollo
  tier: backend
---
# ------------------- SpringBoot Application Deployment ------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot2-apollo-deployment
  namespace: default
spec:
  selector:
      matchLabels:
        app: springboot2-apollo
        tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot2-apollo
        tier: backend
    spec:
      containers:
        - name: springboot2-apollo
          image: docker-server.com/library/com.sunyu.apollo/springboot2-apollo:1.1
          imagePullPolicy: Always
#          resources:
#            requests:
#              cpu: 100m
#              memory: 100Mi
#            limits:
#              cpu: 100m
#              memory: 100Mi
          volumeMounts:
          - name: apollo-env
            mountPath: /opt/settings
          ports:
            - containerPort: 8888
      volumes:
      - name: apollo-env
        configMap:
          name: apollo-prop-env
      imagePullSecrets:
      - name: harbor-key
---
# ------------------- SpringBoot Application ingress ---------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot2-apollo-ingress
  namespace: default
spec:
  rules:
  - host: spring.boot2.apollo.com
    http:
      #port: 80
      paths:
      - path: /
        backend:
          serviceName: springboot2-apollo-svc
          servicePort: 8888
